[Add] コンテナ生成機能完成

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,13 @@
 {
+  "type": "module",
+  "name": "ayaka",
+  "version": "1.0.0",
+  "main": "app.js",
+  "author": "6mile0",
+  "license": "MIT",
   "dependencies": {
     "discord.js": "^14.7.1",
+    "nanoid": "^4.0.0",
     "nedb": "^1.8.0"
   }
 }
