--- a/compose.yaml
+++ b/compose.yaml
@@ -16,8 +16,10 @@ services:
     ports:
       - 3307:3306
     volumes:
-      - "./db/data:/var/lib/mysql"
-      - "./db/data/init.d:/docker-entrypoint-initdb.d"
+      - ./db/data:/var/lib/mysql
+      - ./db/logs:/var/log/mysql
+      - ./db/conf.d:/etc/mysql/conf.d
+      - ./db/init.d:/docker-entrypoint-initdb.d
     networks:
       - br0
     environment:
@@ -25,8 +27,23 @@ services:
       - MYSQL_DATABASE=ayaka
       - MYSQL_USER=ayaka
       - MYSQL_PASSWORD=ayaka
+  nginx:
+    image: nginx:latest
+    restart: always
+    ports:
+      - 8080:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/errorpages:/usr/share/nginx/errorpages
+    networks:
+      - br0
+    depends_on:
+      - bot
+
 volumes:
   db:
+  nginx:
 
 networks:
   br0:
