[Add] 細かな修正を追加

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,12 +1,12 @@
 server {
-    listen       59999;
+    listen       80;
     server_name  localhost;
 
     location /test {
-        proxy_pass localhost:60000;
+        proxy_pass http://localhost:60000;
     }
     location /test2 {
-        proxy_pass localhost:60001;
+        proxy_pass http://localhost:60001;
     }
 
     error_page   403 404 500 502 503 504  /error.html;
