--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,11 @@
 version: "3.9"
 services:
   bot:
-    image: node:latest
+    build: .
     volumes:
       - ./app:/app
+      - ./app/node_modules:/app/node_modules
+      - /var/run/docker.sock:/var/run/docker.sock
     working_dir: /app
     command: bash -c "yarn install && yarn run dev"
     networks:
