[Add] nginxリバースプロキシを追加

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,12 +1,14 @@
 server {
-    listen       80;
+    listen       8080;
     server_name  localhost;
 
-    location /test {
-        proxy_pass http://localhost:60000;
-    }
-    location /test2 {
-        proxy_pass http://localhost:60001;
+    location /TS7rcEO7a_4uNKrj {
+        rewrite /TS7rcEO7a_4uNKrj/(.*) /$1  break;
+        proxy_pass http://host.docker.internal:60000;
+        proxy_set_header Host $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection upgrade;
+        proxy_set_header Accept-Encoding gzip;
     }
 
     error_page   403 404 500 502 503 504  /error.html;
