--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.7.1",
+    "mysql2": "^3.1.0",
     "nanoid": "^4.0.0",
-    "nedb": "^1.8.0",
     "nodemon": "^2.0.20"
   }
 }
