--- a/compose.yaml
+++ b/compose.yaml
@@ -4,10 +4,12 @@ services:
     build: .
     volumes:
       - ./app:/app
-      - ./app/node_modules:/app/node_modules
+      - node_modules:/app/node_modules
       - /var/run/docker.sock:/var/run/docker.sock
     working_dir: /app
     command: bash -c "yarn install && yarn run dev"
+    environment:
+      TZ: Asia/Tokyo
     networks:
       - br0
     depends_on:
@@ -15,13 +17,10 @@ services:
   db:
     image: mariadb:latest
     restart: always
-    ports:
-      - 3307:3306
     volumes:
-      - ./db/data:/var/lib/mysql
-      - ./db/logs:/var/log/mysql
-      - ./db/conf.d:/etc/mysql/conf.d
       - ./db/init.d:/docker-entrypoint-initdb.d
+      - ./db/my.cnf:/etc/mysql/conf.d/my.cnf
+      - db-data:/var/lib/mysql
     networks:
       - br0
     environment:
@@ -29,6 +28,7 @@ services:
       - MYSQL_DATABASE=ayaka
       - MYSQL_USER=ayaka
       - MYSQL_PASSWORD=ayaka
+
   nginx:
     image: nginx:latest
     restart: always
@@ -44,8 +44,10 @@ services:
       - bot
 
 volumes:
-  db:
-  nginx:
+  node_modules:
+    driver: local
+  db-data:
+    driver: local
 
 networks:
   br0:
