--- a/compose.yaml
+++ b/compose.yaml
@@ -24,10 +24,13 @@ services:
     networks:
       - br0
     environment:
-      - MYSQL_ROOT_PASSWORD=kidahirokazu
       - MYSQL_DATABASE=ayaka
       - MYSQL_USER=ayaka
-      - MYSQL_PASSWORD=ayaka
+      - MYSQL_PASSWORD_FILE=/run/secrets/db_password
+      - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db_root_password
+    secrets:
+      - db_password
+      - db_root_password
 
   nginx:
     image: nginx:latest
@@ -52,3 +55,9 @@ volumes:
 networks:
   br0:
     driver: bridge
+
+secrets:
+  db_password:
+    file: ./secrets/db_password.txt
+  db_root_password:
+    file: ./secrets/db_root_password.txt
