--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   bot:
-    build: .
+    build: ./dockerfiles/bot
     volumes:
       - ./app:/app
       - /var/run/docker.sock:/var/run/docker.sock
@@ -33,14 +33,10 @@ services:
       - db_root_password
 
   nginx:
-    image: nginx:latest
+    build: ./dockerfiles/nginx
     restart: always
     ports:
       - 8080:80
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/errorpages:/usr/share/nginx/errorpages
     networks:
       - br0
     depends_on:
@@ -58,6 +54,6 @@ networks:
 
 secrets:
   db_password:
-    file: ./secrets/db_password.txt
+    file: ./secrets/db_userPass.txt
   db_root_password:
-    file: ./secrets/db_root_password.txt
+    file: ./secrets/db_rootPass.txt
