--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.1.0",
     "nanoid": "^4.0.0",
