--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,7 @@ services:
       - ./app:/app
       - /var/run/docker.sock:/var/run/docker.sock
       - node_modules:/app/node_modules
+      - ${MNTPOINT}:/userData
     working_dir: /app
     command: bash -c "yarn install && yarn run dev"
     environment:
