--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,10 @@
   "author": "6mile0",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.3.3",
     "discord.js": "^14.7.1",
-    "ejs": "^3.1.8",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mysql2": "^3.1.0",
     "nanoid": "^4.0.0",
